--- a/index.html
+++ b/index.html
@@ -4,13 +4,69 @@
     <title>CesarCruz.store</title>
   </head>
 <body>
-  <table border 1px>
+  <main style="display: grid;">
+
+  <table border="1px">
     <tr>
       <td>
-      <h1>esta es mi tienda estamos desarrollando para usted</h1>
+      <h1>mi tienda</h1>
+    </td>
+    <td>
+      <h1>logo</h1>
+    </td>
+    <td>usuario</td>
+    <td>carrito</td>
+  </tr>
+</table>  
 
+  <table border="1">
+    <tr>
+      <td>
+      producto
+    </td>
+    <td>
+      descripcion
+    </td>
+    <td>
+      comprar
+    </td>
+    </tr>
+     </table>
+
+</main>
+
+<footer style="display: grid;">
+  
+  <table border="1px">
+
+    <tr>
+      <td>
+        redes
       </td>
+      <td>
+         ayuda
+      </td>
+      <td>
+        Logo
+      </td>
+      <td>
+        corporativo
+      </td>
+      <td>
+      url <a href="https://desarrollocseg.github.io/cesarcruz-store.io/">online</a>
+    </td>
     </tr>
   </table>
+ 
+  <table border="1" style="display: grid;">
+     <tr>
+    <td>
+  copyright 2025 cesarcruz-store
+  <br>
+  powers by <a href="https://Desarrollocseg.com">desarrollocseg.com </a>
+  </td>
+  </tr>
+  </table>
+</footer>
 </body>
 </html>
