etiquetado: estructura HTML, etiquetas semánticas, buenas prácticas HTML

--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 
-<html>
+<html lang="es">
   <head>
+    <meta charset="UTF -8">
     <title>CesarCruz.store</title>
   </head>
-<body>
-  <main style="display: grid;">
 
+<body>
+
+<header>
   <table border="1px">
     <tr>
       <td>
@@ -18,7 +20,11 @@
     <td>carrito</td>
   </tr>
 </table>  
+</header>
+ 
+<main style="display: grid;">
 
+<section>
   <table border="1">
     <tr>
       <td>
@@ -32,11 +38,11 @@
     </td>
     </tr>
      </table>
-
+</section>
 </main>
 
 <footer style="display: grid;">
-  
+  <section>
   <table border="1px">
 
     <tr>
@@ -57,7 +63,7 @@
     </td>
     </tr>
   </table>
- 
+ </section>
   <table border="1" style="display: grid;">
      <tr>
     <td>
